--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "paguru",
   "version": "0.1.0",
+  "author": "Savio ventura",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
